--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Jeongstagram">
-        <activity android:name=".TutorialActivity"></activity>
+        <activity android:name=".JoinActivity"></activity>
+        <activity android:name=".tutorial.TutorialActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".StartActivity">
             <intent-filter>
