--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ dependencies {
     def lottieVersion = "4.0.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
 }
