--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Jeongstagram">
-        <activity android:name=".EditProfileActivity"></activity>
+        <activity android:name=".WriteActivity"></activity>
+        <activity android:name=".EditProfileActivity" />
         <activity android:name=".SettingActivity" />
         <activity android:name=".tutorial.ProfileActivity" />
         <activity android:name=".tutorial.TutorialActivity" />
